--- a/scripts/4intelligence_case_Q2.ipynb
+++ b/scripts/4intelligence_case_Q2.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,10 +48,12 @@
     "from datetime import datetime , date\r\n",
     "import statsmodels.api as sm\r\n",
     "from statsmodels.tsa.seasonal import seasonal_decompose\r\n",
-    "import warnings\r\n",
     "import sklearn\r\n",
-    "from sklearn.decomposition import PCA\r\n",
+    "from sklearn.model_selection import train_test_split\r\n",
+    "from sklearn.linear_model import LinearRegression\r\n",
     "from sklearn.preprocessing import StandardScaler\r\n",
+    "from sklearn.metrics import *\r\n",
+    "import warnings\r\n",
     "warnings.filterwarnings('ignore')"
    ]
   },
@@ -294,21 +296,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'train_test_split' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-15-5667f6172110>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m# splitting the features\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m train_features, test_features, train_labels, test_labels = train_test_split(features , label, \n\u001b[0m\u001b[0;32m      4\u001b[0m                                                                             \u001b[0mtest_size\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m0.25\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m                                                                             random_state = 0)\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'train_test_split' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# splitting the features\r\n",
     "\r\n",
@@ -319,10 +309,47 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "LinearRegression()"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# model 1: Linear Regression\r\n",
+    "\r\n",
+    "model1 = LinearRegression()\r\n",
+    "model1.fit(train_features, train_labels)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# predictions\r\n",
+    "\r\n",
+    "predictions = model1.predict(test_features)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# evaluate the model 1\r\n",
+    "\r\n"
+   ]
   }
  ],
  "metadata": {
