--- a/scripts/4intelligence_case_Q2.ipynb
+++ b/scripts/4intelligence_case_Q2.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
     "from statsmodels.tsa.seasonal import seasonal_decompose\r\n",
     "import sklearn\r\n",
     "from sklearn.model_selection import train_test_split\r\n",
-    "from sklearn.linear_model import LinearRegression\r\n",
+    "from sklearn.linear_model import LinearRegression ,ElasticNet\r\n",
     "from sklearn.preprocessing import StandardScaler\r\n",
     "from sklearn.metrics import *\r\n",
     "import warnings\r\n",
@@ -332,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -343,13 +343,50 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Linear Regression MAE:  240.4548413577102\n",
+      "Linear Regression MSE:  84187.4931919511\n"
+     ]
+    }
+   ],
+   "source": [
+    "# evaluate the model 1\r\n",
+    "\r\n",
+    "mae = mean_absolute_error(test_labels , predictions)\r\n",
+    "mse = mean_squared_error(test_labels , predictions)\r\n",
+    "print('Linear Regression MAE: ', mae)\r\n",
+    "print('Linear Regression MSE: ', mse)\r\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# evaluate the model 1\r\n",
-    "\r\n"
+    "# model 2: ElasticNet\r\n",
+    "\r\n",
+    "# test all hyperparams below\r\n",
+    "param_grid = [{'l1_ratio':[0.25, 0.5, 0.75, 1],\r\n",
+    "               'max_iter':[500, 750, 1000, 2000, 5000]}]\r\n",
+    "\r\n",
+    "GS = GridSearchCV(reg , param_grid , scoring= 'neg_mean_absolute_error' , error_score= 'raise', cv=5)\r\n",
+    "GS.fit(train_features, train_labels)\r\n",
+    "print(GS.best_params_)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
