--- a/scripts/4intelligence_case_Q2.ipynb
+++ b/scripts/4intelligence_case_Q2.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
     "import statsmodels.api as sm\r\n",
     "from statsmodels.tsa.seasonal import seasonal_decompose\r\n",
     "import sklearn\r\n",
-    "from sklearn.model_selection import train_test_split\r\n",
+    "from sklearn.model_selection import train_test_split ,GridSearchCV\r\n",
     "from sklearn.linear_model import LinearRegression ,ElasticNet\r\n",
     "from sklearn.preprocessing import StandardScaler\r\n",
     "from sklearn.metrics import *\r\n",
@@ -271,20 +271,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
     "# selecting features and target\r\n",
     "\r\n",
-    "features = df_train[['pim_se']]\r\n",
+    "features = df_train[['pim_se','ind_ne']]\r\n",
     "\r\n",
     "label = df_train['ind_se'].values"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -296,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -318,7 +318,7 @@
        "LinearRegression()"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -332,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -343,15 +343,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Linear Regression MAE:  240.4548413577102\n",
-      "Linear Regression MSE:  84187.4931919511\n"
+      "Linear Regression MAE:  227.693735583782\n",
+      "Linear Regression MSE:  75930.46731810627\n"
      ]
     }
    ],
@@ -366,20 +366,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'l1_ratio': 1, 'max_iter': 500}\n"
+     ]
+    }
+   ],
    "source": [
     "# model 2: ElasticNet\r\n",
+    "\r\n",
+    "model2 = ElasticNet()\r\n",
     "\r\n",
     "# test all hyperparams below\r\n",
     "param_grid = [{'l1_ratio':[0.25, 0.5, 0.75, 1],\r\n",
     "               'max_iter':[500, 750, 1000, 2000, 5000]}]\r\n",
     "\r\n",
-    "GS = GridSearchCV(reg , param_grid , scoring= 'neg_mean_absolute_error' , error_score= 'raise', cv=5)\r\n",
+    "# exhaustive search for best params\r\n",
+    "GS = GridSearchCV(model2 , param_grid , scoring= 'neg_mean_absolute_error' , error_score= 'raise', cv=5)\r\n",
     "GS.fit(train_features, train_labels)\r\n",
     "print(GS.best_params_)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# model 2 with best params\r\n",
+    "\r\n",
+    "model2 = ElasticNet(l1_ratio = GS.best_params_['l1_ratio'] , \r\n",
+    "                    max_iter = GS.best_params_['max_iter'])\r\n",
+    "\r\n",
+    "model2.fit(train_features , train_labels)\r\n",
+    "predictions = model2.predict(test_features)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ElasticNet MAE:  227.53796070723746\n",
+      "ElasticNet MSE:  75785.04640922096\n"
+     ]
+    }
+   ],
+   "source": [
+    "# evaluate the model 2\r\n",
+    "\r\n",
+    "mae = mean_absolute_error(test_labels , predictions)\r\n",
+    "mse = mean_squared_error(test_labels , predictions)\r\n",
+    "print('ElasticNet MAE: ', mae)\r\n",
+    "print('ElasticNet MSE: ', mse)\r\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
