--- a/scripts/4intelligence_case_Q2.ipynb
+++ b/scripts/4intelligence_case_Q2.ipynb
@@ -16,13 +16,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "WARNING: You are using pip version 21.0.1; however, version 21.1.2 is available.\n",
+      "You should consider upgrading via the 'c:\\users\\gabriel\\appdata\\local\\programs\\python\\python39\\python.exe -m pip install --upgrade pip' command.\n",
       "WARNING: You are using pip version 21.0.1; however, version 21.1.2 is available.\n",
       "You should consider upgrading via the 'c:\\users\\gabriel\\appdata\\local\\programs\\python\\python39\\python.exe -m pip install --upgrade pip' command.\n"
      ]
@@ -31,12 +33,13 @@
    "source": [
     "# installing libs and packages\r\n",
     "\r\n",
-    "!pip install sklearn -q"
+    "!pip install sklearn -q\r\n",
+    "!pip install xgboost -q"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,11 +51,12 @@
     "from datetime import datetime , date\r\n",
     "import statsmodels.api as sm\r\n",
     "from statsmodels.tsa.seasonal import seasonal_decompose\r\n",
-    "import sklearn\r\n",
     "from sklearn.model_selection import train_test_split ,GridSearchCV\r\n",
     "from sklearn.linear_model import LinearRegression ,ElasticNet\r\n",
     "from sklearn.preprocessing import StandardScaler\r\n",
     "from sklearn.metrics import *\r\n",
+    "from sklearn.ensemble import RandomForestRegressor\r\n",
+    "from xgboost import XGBRegressor\r\n",
     "import warnings\r\n",
     "warnings.filterwarnings('ignore')"
    ]
@@ -271,20 +275,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
     "# selecting features and target\r\n",
     "\r\n",
-    "features = df_train[['pim_se','ind_ne']]\r\n",
+    "features = df_train[['pim_se','ind_ne','massa_r','renda_r']]\r\n",
     "\r\n",
     "label = df_train['ind_se'].values"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -296,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -309,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -318,7 +322,7 @@
        "LinearRegression()"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -332,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -343,15 +347,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Linear Regression MAE:  227.693735583782\n",
-      "Linear Regression MSE:  75930.46731810627\n"
+      "Linear Regression MAE:  191.2077749368664\n",
+      "Linear Regression MSE:  60394.7139623759\n",
+      "Coefficient of determination: 0.72\n"
      ]
     }
    ],
@@ -361,12 +366,14 @@
     "mae = mean_absolute_error(test_labels , predictions)\r\n",
     "mse = mean_squared_error(test_labels , predictions)\r\n",
     "print('Linear Regression MAE: ', mae)\r\n",
-    "print('Linear Regression MSE: ', mse)\r\n"
+    "print('Linear Regression MSE: ', mse)\r\n",
+    "print('Coefficient of determination: %.2f'\r\n",
+    "      % r2_score(test_labels , predictions))\r\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -394,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -409,15 +416,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ElasticNet MAE:  227.53796070723746\n",
-      "ElasticNet MSE:  75785.04640922096\n"
+      "ElasticNet MAE:  194.52254272095595\n",
+      "ElasticNet MSE:  62915.55858418738\n",
+      "Coefficient of determination: 0.71\n"
      ]
     }
    ],
@@ -427,7 +435,110 @@
     "mae = mean_absolute_error(test_labels , predictions)\r\n",
     "mse = mean_squared_error(test_labels , predictions)\r\n",
     "print('ElasticNet MAE: ', mae)\r\n",
-    "print('ElasticNet MSE: ', mse)\r\n"
+    "print('ElasticNet MSE: ', mse)\r\n",
+    "print('Coefficient of determination: %.2f'\r\n",
+    "      % r2_score(test_labels , predictions))\r\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'max_depth': 5, 'n_estimators': 50}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# model 2: Random Forest\r\n",
+    "\r\n",
+    "model3 = RandomForestRegressor()\r\n",
+    "\r\n",
+    "# test all hyperparams below\r\n",
+    "param_grid = [{'n_estimators':[35,40,45,50,55,60,70,80,90,100,150,180,220,250,280],\r\n",
+    "               'max_depth':[3,5,6,7,8,9,10,11,12]}]\r\n",
+    "\r\n",
+    "# exhaustive search for best params\r\n",
+    "GS = GridSearchCV(model3 , param_grid , scoring= 'neg_mean_absolute_error' , error_score= 'raise', cv=5)\r\n",
+    "GS.fit(train_features, train_labels)\r\n",
+    "print(GS.best_params_)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# model 3 with best params\r\n",
+    "\r\n",
+    "model3 = RandomForestRegressor(n_estimators = GS.best_params_['n_estimators'] , \r\n",
+    "                            max_depth = GS.best_params_['max_depth'])\r\n",
+    "\r\n",
+    "model3.fit(train_features , train_labels)\r\n",
+    "predictions = model3.predict(test_features)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Random Forest MAE:  211.37414761596972\n",
+      "Random Forest MSE:  72349.94748516087\n",
+      "Coefficient of determination: 0.67\n"
+     ]
+    }
+   ],
+   "source": [
+    "# evaluate the model 3\r\n",
+    "\r\n",
+    "mae = mean_absolute_error(test_labels , predictions)\r\n",
+    "mse = mean_squared_error(test_labels , predictions)\r\n",
+    "print('Random Forest MAE: ', mae)\r\n",
+    "print('Random Forest MSE: ', mse)\r\n",
+    "print('Coefficient of determination: %.2f'\r\n",
+    "      % r2_score(test_labels , predictions))\r\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'booster': 'gbtree', 'eval_metric': 'mae', 'learning_rate': 0.5, 'max_depth': 10, 'n_estimators': 150, 'objective': 'reg:squarederror'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# model 4: Gradient descent\r\n",
+    "\r\n",
+    "model4 = XGBRegressor()\r\n",
+    "\r\n",
+    "# test all hyperparams below\r\n",
+    "param_grid = [{'max_depth':[4,5,6,7,8,9,10,11,12,13],\r\n",
+    "               'n_estimators':[150,180,200,220],\r\n",
+    "               'objective':['reg:squarederror'],\r\n",
+    "               'eval_metric':['mae'],\r\n",
+    "               'booster':['gbtree'],\r\n",
+    "               'learning_rate':[0.5,0.7,0.9]}]\r\n",
+    "\r\n",
+    "# exhaustive search for best params\r\n",
+    "GS = GridSearchCV(model4 , param_grid , scoring= 'neg_mean_absolute_error' , error_score= 'raise', cv=5)\r\n",
+    "GS.fit(train_features, train_labels)\r\n",
+    "print(GS.best_params_)"
    ]
   },
   {
@@ -435,14 +546,15 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# model 4 with best params\r\n",
+    "model4 = XGBRegressor(n_estimators = GS.best_params_['n_estimators'] , \r\n",
+    "                    max_depth = GS.best_params_['max_depth'],\r\n",
+    "                    objective = GS.best_params_['objective'],\r\n",
+    "                    eval_metric = GS.best_params_['eval_metric'],\r\n",
+    "                    booster = GS.best_params_['booster'],\r\n",
+    "                    learning_rate = GS.best_params_['learning_rate'])"
+   ]
   }
  ],
  "metadata": {
