--- a/scripts/4intelligence_case_Q2.ipynb
+++ b/scripts/4intelligence_case_Q2.ipynb
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,6 +57,7 @@
     "from sklearn.metrics import *\r\n",
     "from sklearn.ensemble import RandomForestRegressor\r\n",
     "from xgboost import XGBRegressor\r\n",
+    "from sklearn.neural_network import MLPRegressor\r\n",
     "import warnings\r\n",
     "warnings.filterwarnings('ignore')"
    ]
@@ -548,12 +549,118 @@
    "outputs": [],
    "source": [
     "# model 4 with best params\r\n",
+    "\r\n",
     "model4 = XGBRegressor(n_estimators = GS.best_params_['n_estimators'] , \r\n",
     "                    max_depth = GS.best_params_['max_depth'],\r\n",
     "                    objective = GS.best_params_['objective'],\r\n",
     "                    eval_metric = GS.best_params_['eval_metric'],\r\n",
     "                    booster = GS.best_params_['booster'],\r\n",
-    "                    learning_rate = GS.best_params_['learning_rate'])"
+    "                    learning_rate = GS.best_params_['learning_rate'])\r\n",
+    "\r\n",
+    "model4.fit(train_features , train_labels)\r\n",
+    "predictions = model4.predict(test_features)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Gradient Descent MAE:  211.37414761596972\n",
+      "Gradient Descent MSE:  72349.94748516087\n",
+      "Coefficient of determination: 0.67\n"
+     ]
+    }
+   ],
+   "source": [
+    "# evaluate the model 4\r\n",
+    "\r\n",
+    "mae = mean_absolute_error(test_labels , predictions)\r\n",
+    "mse = mean_squared_error(test_labels , predictions)\r\n",
+    "print('Gradient Descent MAE: ', mae)\r\n",
+    "print('Gradient Descent MSE: ', mse)\r\n",
+    "print('Coefficient of determination: %.2f'\r\n",
+    "      % r2_score(test_labels , predictions))\r\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'activation': 'relu', 'alpha': 0.01, 'hidden_layer_sizes': (50, 50, 50), 'learning_rate': 'invscaling', 'max_iter': 250, 'solver': 'lbfgs', 'tol': 0.01}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# model 5: Neural Netwoks\r\n",
+    "\r\n",
+    "model5 = MLPRegressor()\r\n",
+    "\r\n",
+    "param_grid = [{'activation':['relu'],'solver':['lbfgs'],'alpha':[0.01],\r\n",
+    "               'hidden_layer_sizes':[(100,100),(50),(50,50,50)],\r\n",
+    "               'max_iter':[250,500],\r\n",
+    "               'learning_rate':['constant', 'invscaling', 'adaptive'],\r\n",
+    "               'tol':[0.01]}]\r\n",
+    "\r\n",
+    "# exhaustive search for best params\r\n",
+    "GS = GridSearchCV(model5 , param_grid , scoring= 'neg_mean_absolute_error' , error_score= 'raise', cv=5)\r\n",
+    "GS.fit(train_features, train_labels)\r\n",
+    "print(GS.best_params_)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# model 5 with best params\r\n",
+    "\r\n",
+    "model5 = MLPRegressor(activation= GS.best_params_['activation'],\r\n",
+    "                        alpha= GS.best_params_['alpha'],\r\n",
+    "                        hidden_layer_sizes= GS.best_params_['hidden_layer_sizes'],\r\n",
+    "                        learning_rate= GS.best_params_['learning_rate'],\r\n",
+    "                        max_iter= GS.best_params_['max_iter'],\r\n",
+    "                        solver= GS.best_params_['solver'],\r\n",
+    "                        tol= GS.best_params_['tol'])\r\n",
+    "\r\n",
+    "model5.fit(train_features , train_labels)\r\n",
+    "predictions = model5.predict(test_features)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Neural Networks MAE:  197.89744254369768\n",
+      "Neural Networks MSE:  64796.758667951064\n",
+      "Coefficient of determination: 0.70\n"
+     ]
+    }
+   ],
+   "source": [
+    "# evaluate the model 5\r\n",
+    "\r\n",
+    "mae = mean_absolute_error(test_labels , predictions)\r\n",
+    "mse = mean_squared_error(test_labels , predictions)\r\n",
+    "print('Neural Networks MAE: ', mae)\r\n",
+    "print('Neural Networks MSE: ', mse)\r\n",
+    "print('Coefficient of determination: %.2f'\r\n",
+    "      % r2_score(test_labels , predictions))\r\n"
    ]
   }
  ],
