--- a/scripts/4intelligence_case_Q2.ipynb
+++ b/scripts/4intelligence_case_Q2.ipynb
@@ -4,50 +4,46 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Business Case - 4Intelligence"
+    "# Business Case - 4Intelligence "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Model to Predict ...."
+    "## Model"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 122,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING: You are using pip version 21.0.1; however, version 21.1.2 is available.\n",
-      "You should consider upgrading via the 'c:\\users\\gabriel\\appdata\\local\\programs\\python\\python39\\python.exe -m pip install --upgrade pip' command.\n",
-      "WARNING: You are using pip version 21.0.1; however, version 21.1.2 is available.\n",
-      "You should consider upgrading via the 'c:\\users\\gabriel\\appdata\\local\\programs\\python\\python39\\python.exe -m pip install --upgrade pip' command.\n",
-      "WARNING: You are using pip version 21.0.1; however, version 21.1.2 is available.\n",
-      "You should consider upgrading via the 'c:\\users\\gabriel\\appdata\\local\\programs\\python\\python39\\python.exe -m pip install --upgrade pip' command.\n",
-      "WARNING: You are using pip version 21.0.1; however, version 21.1.2 is available.\n",
-      "You should consider upgrading via the 'c:\\users\\gabriel\\appdata\\local\\programs\\python\\python39\\python.exe -m pip install --upgrade pip' command.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# installing libs and packages\r\n",
     "\r\n",
     "!pip install sklearn -q\r\n",
     "!pip install xgboost -q\r\n",
-    "!pip install tensorflow -q\r\n",
-    "!pip install keras -q"
+    "#!pip install fbprophet -q"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 123,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'fbprophet'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-123-9802ecfaa433>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     15\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0msklearn\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mneural_network\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mMLPRegressor\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     16\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0msklearn\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msvm\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mSVR\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 17\u001b[1;33m \u001b[1;32mfrom\u001b[0m \u001b[0mfbprophet\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mProphet\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     18\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mwarnings\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     19\u001b[0m \u001b[0mwarnings\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfilterwarnings\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'ignore'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'fbprophet'"
+     ]
+    }
+   ],
    "source": [
     "# importing libs\r\n",
     "\r\n",
@@ -65,8 +61,6 @@
     "from xgboost import XGBRegressor\r\n",
     "from sklearn.neural_network import MLPRegressor\r\n",
     "from sklearn.svm import SVR\r\n",
-    "from keras.models import Sequential\r\n",
-    "from keras.layers import Dense\r\n",
     "import warnings\r\n",
     "warnings.filterwarnings('ignore')"
    ]
@@ -229,13 +223,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [],
    "source": [
     "# split train dataset\r\n",
     "\r\n",
-    "df_train = df.loc[df['data_tidy'] <= date(2021,2,1)]"
+    "df_train = df.loc[df['data_tidy'] <= date(2021,2,1)]\r\n",
+    "df_val = df.loc[df['data_tidy'] > date(2021,2,1)]"
    ]
   },
   {
