--- a/scripts/4intelligence_case_Q2.ipynb
+++ b/scripts/4intelligence_case_Q2.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,6 +43,7 @@
     "from pandas.plotting import autocorrelation_plot\r\n",
     "import statsmodels.api as sm\r\n",
     "from statsmodels.tsa.seasonal import seasonal_decompose\r\n",
+    "from statsmodels.tsa.arima.model import ARIMA\r\n",
     "from sklearn.model_selection import train_test_split ,GridSearchCV\r\n",
     "from sklearn.linear_model import LinearRegression ,ElasticNet\r\n",
     "from sklearn.preprocessing import StandardScaler\r\n",
@@ -103,7 +104,7 @@
    ],
    "source": [
     "# autocorrelation plot in target feature\r\n",
-    "\r\n",
+    "# checking randomness\r\n",
     "rcParams['figure.figsize'] = 8, 5\r\n",
     "autocorrelation_plot(time_series_ind_se)\r\n",
     "plt.show()"
