--- a/scripts/4intelligence_case_Q2.ipynb
+++ b/scripts/4intelligence_case_Q2.ipynb
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [
     {
@@ -142,7 +142,8 @@
     }
    ],
    "source": [
-    "# \r\n",
+    "# autocorrelation and autocorrelation partial plots\r\n",
+    "# try to identify the best \"p\" and \"q\" to arima model params\r\n",
     "\r\n",
     "rcParams['figure.figsize'] = 7, 4\r\n",
     "plot_pacf(time_series_ind_se,lags=25,title='Industrial Energy Consumption in SE')\r\n",
