--- a/scripts/4intelligence_case_Q2.ipynb
+++ b/scripts/4intelligence_case_Q2.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Model"
+    "## Time Series Model"
    ]
   },
   {
@@ -515,6 +515,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Model 1: Linear Regression"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 32,
    "metadata": {},
@@ -572,6 +579,13 @@
     "print('Linear Regression MSE: ', mse)\r\n",
     "print('Coefficient of determination: %.2f'\r\n",
     "      % r2_score(test_labels , predictions))\r\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Model 2: ElasticNet"
    ]
   },
   {
@@ -644,6 +658,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Model 3: Random Forest"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 38,
    "metadata": {},
@@ -710,6 +731,13 @@
     "print('Random Forest MSE: ', mse)\r\n",
     "print('Coefficient of determination: %.2f'\r\n",
     "      % r2_score(test_labels , predictions))\r\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Model 4: Gradient Descent"
    ]
   },
   {
@@ -790,6 +818,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Model 5: Support Vector Machine"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 44,
    "metadata": {},
@@ -859,6 +894,13 @@
     "print('SVR MSE: ', mse)\r\n",
     "print('Coefficient of determination: %.2f'\r\n",
     "      % r2_score(test_labels , predictions))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Model 6: Neural Networks"
    ]
   },
   {
@@ -935,6 +977,13 @@
     "print('Neural Networks MSE: ', mse)\r\n",
     "print('Coefficient of determination: %.2f'\r\n",
     "      % r2_score(test_labels , predictions))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Model 7: ARIMA"
    ]
   },
   {
@@ -1236,29 +1285,6 @@
    "source": [
     "# predictions in validation dataset: 2021-03-01 to 2022-12-01\r\n",
     "predictions = model4.predict(val_features)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 64,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([7893.63  , 7712.64  , 8062.2227, 8060.417 , 8153.284 , 8380.5625,\n",
-       "       8245.916 , 8475.598 , 8296.747 , 7400.1177, 7007.7686, 7310.3145,\n",
-       "       7610.141 , 7369.1973, 7660.449 , 7632.1084, 8004.581 , 8147.657 ,\n",
-       "       7750.607 , 7853.8223, 8094.4775, 7162.311 ], dtype=float32)"
-      ]
-     },
-     "execution_count": 64,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "predictions"
    ]
   },
   {
