--- a/scripts/4intelligence_case_Q2.ipynb
+++ b/scripts/4intelligence_case_Q2.ipynb
@@ -2145,7 +2145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 295,
+   "execution_count": 307,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2208,9 +2208,13 @@
     "* 1 - Verifiquei que a variável alvo ('ind_se'), apesar de ser uma série temporal e possuir uma certa sazionalidade, não tinha uma tendência principal bem definida, ou seja, algo bem aleatório. Diante disso, decidi começar usando modelos que não são especificamente para séries temporais, a fim de obter um bom resultado, pois verifiquei que havia uma boa correlação com diversas variáveis. Daí 8 modelos foram testados: Linear Regression, ElasticNet, Random Forest, XGboost, Support Vector Machine, Neural Networks,\r\n",
     "ARIMA e Recurrent Neural Networks-LSTM.\r\n",
     "\r\n",
+    "#--------------------------------------------------------------------------------------------------------------#\r\n",
+    "\r\n",
     "* 2 - Para a avaliação dos modelos foram utilizadas as métricas de erro médio absoluto (mae) e a erro médio quadrático (mse). Porém, dei um foco para a mae, pois devido ao COVID-19 houve um comportamento bem atípico, então já imaginava que a métrica mse seria bem penalizada pelo seu caráter quadrático. Então o modelo que teve a melhor _performance_ foi o XGBoost com erro médio absoluto por volta de 149 GWh por previsão (mês).\r\n",
     "\r\n",
-    "* 3 - Durante a _feature engineering_, adicionei cerca de 15 novas _features_, e que haviam grande correlação, tanto linear(Pearson) quanto não paramétrica(Spearman)com a nossa variável _target_. Algumas variáveis até tinha melhor correlação ('ind_total','ind_ne') e possivelmente retornariam um melhor mais acurado, porém são variáveis que não fariam sentido de serem utilizadas, principalmente a energia total consumida pela classe Industrial ('ind_total'), pois de certa forma a variável alvo estaria inserida na mesma.\r\n",
+    "#--------------------------------------------------------------------------------------------------------------#\r\n",
+    "\r\n",
+    "* 3 - Durante a _feature engineering_, adicionei cerca de 15 novas _features_, e que haviam grande correlação, tanto linear(Pearson) quanto não paramétrica(Spearman)com a nossa variável _target_. Algumas variáveis até tinha melhor correlação ('ind_total','ind_ne') e possivelmente retornariam um melhor mais acurado, porém são variáveis que não fariam sentido de serem utilizadas, principalmente a energia total consumida pela classe Industrial ('ind_total'), pois de certa forma a variável alvo estaria inserida na mesma. Diante disso, após diversos testes, inclusive a redução de dimensionalidade das _features_ usando o PCA(Principal Component Analysis). Após os testes a melhor combinação dos previsores foi ['pim_se','pim_s','pim_ne','massa_r','renda_r','pop_ocup_br','pmc_r_se','mes','temp_min_se','mes','pmc_r_s','media_temp','pmc_a_co','ano'].\r\n",
     "\r\n"
    ]
   }
