--- a/scripts/4intelligence_case_Q1.ipynb
+++ b/scripts/4intelligence_case_Q1.ipynb
@@ -975,7 +975,7 @@
     }
    ],
    "source": [
-    "# .....\r\n",
+    "# total energy consumption by Residencial class\r\n",
     "\r\n",
     "rcParams['figure.figsize'] = 10, 7\r\n",
     "sns.barplot(data = df, x='ano', y='res_total' , estimator=sum)"
@@ -1008,7 +1008,7 @@
     }
    ],
    "source": [
-    "# .....\r\n",
+    "# Average energy consumption by Business class\r\n",
     "\r\n",
     "rcParams['figure.figsize'] = 10, 7\r\n",
     "sns.barplot(data = df, x='ano', y='com_total')"
@@ -1041,7 +1041,7 @@
     }
    ],
    "source": [
-    "# ....\r\n",
+    "# Average energy consumption by Residential class monthly\r\n",
     "\r\n",
     "rcParams['figure.figsize'] = 10, 7\r\n",
     "sns.barplot(data = df, x='mes', y='res_total')"
@@ -1074,7 +1074,7 @@
     }
    ],
    "source": [
-    "# ....\r\n",
+    "# average temperature by month\r\n",
     "\r\n",
     "rcParams['figure.figsize'] = 10, 7\r\n",
     "sns.barplot(data = df, x='mes', y='media_temp')"
@@ -1140,7 +1140,7 @@
     }
    ],
    "source": [
-    "# ....\r\n",
+    "# mean energy consumption in south region by month (all classes)\r\n",
     "\r\n",
     "rcParams['figure.figsize'] = 10, 7\r\n",
     "sns.barplot(data = df, x='mes', y='s_total' , estimator = mean)"
@@ -1173,7 +1173,7 @@
     }
    ],
    "source": [
-    "# ....\r\n",
+    "# mean energy consumption in CO region by month (all classes)\r\n",
     "\r\n",
     "rcParams['figure.figsize'] = 10, 7\r\n",
     "sns.barplot(data = df, x='mes', y='co_total' , estimator = mean)"
