--- a/scripts/4intelligence_case_Q1.ipynb
+++ b/scripts/4intelligence_case_Q1.ipynb
@@ -39,12 +39,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "# importing libs\r\n",
     "\r\n",
+    "import os, sys\r\n",
     "import pandas as pd\r\n",
     "import numpy as np\r\n",
     "from numpy import mean, median\r\n",
@@ -61,17 +62,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "# load dataset\r\n",
     "\r\n",
-    "data_path = 'E:\\\\Projects\\\\4intelligence_case\\\\data\\\\Bases_Final_ADS_Jun2021.xlsx'\r\n",
+    "data_path = os.path.dirname(sys.argv[0])\r\n",
+    "file = 'Bases_Final_ADS_Jun2021.xlsx'\r\n",
     "\r\n",
-    "df = pd.read_excel(data_path, sheet_name='dados')\r\n",
+    "df = pd.read_excel(data_path + file, sheet_name='dados')\r\n",
     "# columns description\r\n",
-    "col = pd.read_excel(data_path, sheet_name='dicionário')"
+    "col = pd.read_excel(data_path + file, sheet_name='dicionário')"
    ]
   },
   {
