--- a/scripts/4intelligence_case_Q2.ipynb
+++ b/scripts/4intelligence_case_Q2.ipynb
@@ -32,12 +32,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "# importing libs\r\n",
     "\r\n",
+    "import os, sys\r\n",
     "import pandas as pd\r\n",
     "import numpy as np\r\n",
     "from datetime import date\r\n",
@@ -67,19 +68,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "# load dataset\r\n",
     "\r\n",
-    "data_path = 'E:\\\\Projects\\\\4intelligence_case\\\\data\\\\Bases_Final_ADS_Jun2021.xlsx'\r\n",
-    "df = pd.read_excel(data_path, sheet_name='dados')"
+    "data_path = os.path.dirname(sys.argv[0])\r\n",
+    "file = 'Bases_Final_ADS_Jun2021.xlsx'\r\n",
+    "\r\n",
+    "df = pd.read_excel(data_path + file, sheet_name='dados')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
